# pkmnapi

./: .env  .gitignore  .gitmodules  CNAME  Cargo.toml  LICENSE.md  Makefile  Procfile  README.md  app.js  index.html  robots.txt  search_index.en.js  sitemap.xml  style.css
pkmnapi/: .env  Cargo.toml  Rocket.toml
pkmnapi-api/: .env  Cargo.toml
pkmnapi-api/src/: guards.rs  lib.rs  utils.rs
pkmnapi-api/src/requests/: access_tokens.rs  base.rs  hm_moves.rs  hms.rs  item_names.rs  map_pokemon.rs  mart_items.rs  mod.rs  move_names.rs  move_stats.rs  player_names.rs  pokedex_entries.rs  pokedex_texts.rs  pokemon_cries.rs  pokemon_evolutions.rs  pokemon_icons.rs  pokemon_learnsets.rs  pokemon_machines.rs  pokemon_movesets.rs  pokemon_names.rs  pokemon_stats.rs  sav_player_names.rs  tm_moves.rs  tm_prices.rs  trades.rs  trainer_names.rs  trainer_parties.rs  trainer_rewards.rs  type_effects.rs  type_names.rs
pkmnapi-api/src/responses/: base.rs  hm_moves.rs  (+33 more)
pkmnapi-api/tests/: access_tokens.rs  common.rs  hm_moves.rs  hm_names.rs  hms.rs  icons.rs  imgs.rs  item_names.rs  map_pics.rs  map_pokemon.rs  mart_items.rs  move_names.rs  move_stats.rs  player_names.rs  pokedex_entries.rs  pokedex_text.rs  pokemon_cries.rs  pokemon_evolutions.rs  pokemon_icons.rs  pokemon_learnset.rs  pokemon_learnsets.rs  pokemon_machines.rs  pokemon_movesets.rs  pokemon_names.rs  pokemon_pics.rs  pokemon_stats.rs  rate_limiting.rs  rom_patches.rs  roms.rs  sav_player_name.rs  savs.rs  status.rs  tm_moves.rs  tm_names.rs  tm_prices.rs  trades.rs  trainer_names.rs  trainer_parties.rs  trainer_pics.rs  trainer_rewards.rs  (+2 more)
pkmnapi-sql/: .env  Cargo.toml
pkmnapi-sql/src/: error.rs  lib.rs  models.rs  schema.rs  utils.rs
pkmnapi/src/: guards.rs  lib.rs  main.rs  utils.rs
pkmnapi/tests/: access_tokens.rs  common.rs  hms.rs  map_pics.rs  move_names.rs  moves.rs  patches.rs  pokemon_names.rs  pokemon_pics.rs  pokemon_stats.rs  rom_patches.rs  roms.rs  sav_player_name.rs  savs.rs  stats.rs  status.rs  tms.rs  trainer_names.rs  trainer_parties.rs  trainer_pics.rs  type_effects.rs  type_names.rs  types.rs
(+2173 files in other folders)
