[package]
name = "pkmnapi-api"
version = "0.1.0"
authors = ["Kevin Selwyn <kevinselwyn@gmail.com>"]
edition = "2018"

[dependencies]
governor = "0.3.1"
pkmnapi-db = { path = "../pkmnapi-db" }
pkmnapi-email = { path = "../pkmnapi-email" }
pkmnapi-sql = { path = "../pkmnapi-sql" }
rand = "0.7.3"
rocket = "0.4.5"
rocket_contrib = { version = "0.4.5", default-features = false, features = ["json"] }
rocket_cors = { version = "0.5.2", default-features = false }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
validator = "0.10.1"
