[package]
name = "pkmnapi-sql"
version = "0.1.0"
authors = ["Kevin Selwyn <kevinselwyn@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.15"
diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
hex = "0.4.2"
hmac = "0.9.0"
md5 = "0.7.0"
rand = "0.7.3"
sha2 = "0.9.1"
